lab1/Test/L1-A-13-51.output
Error Type A at Line 1
Error Type B at Line 7
Error Type B at Line 22
Error Type B at Line 23
Error Type A at Line 25
Error Type B at Line 30
